src/test/deca/syntax/invalid/sansobjet/MissingBracketWhile.deca
//MissingBracketWhile.deca:6:4: missing '{' at '}'
//Description: test soustraction incorrecte
//Resultats: erreur ligne 5: il manque une { pour le while
{
    while(1)
    }
}
